# ilmart

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg
experiments/: .dockerignore  Dockerfile  README.md  comparison_all.ipynb  dataset_info.py  download_files.py  environment.yml  explain.ipynb  stat_analysis.ipynb
experiments/ebm/: README.md  config.json  ebm_evaluate.py  ebm_train.py  eval.py  ft_config.json  inter_ft.sh  no_inter_ft.sh  train.py
experiments/eff-explain-tradeoff/: README.md  config.json  eval.py  ft_constrained.py  stat_sign_test.py  train.py  train_ft.sh
experiments/eff-explain-tradeoff/notebooks/: tradeoff.ipynb
experiments/gam/: README.md  eval.py  ft_config.json  inter_ft.sh  no_inter_ft.sh  train.py
experiments/ilmart/: README.md  config.json  fixed_config.json  ilmart.ipynb  ilmart_evaluate.py  ilmart_train.py
experiments/ilmart/basic/: eval_inter.py  eval_no_inter.py  inter_train_exp.sh  no_inter_train_exp.sh  (+2 more)
experiments/lambdamart/: README.md  eval.py  feat_importance_lambdamart.py  fixed_config.json  train.py  train.sh
experiments/lmart/: lmart_full.py
experiments/nrgam/: README.md  eval.py  nrgam_evaluate.py  nrgam_train.py  train.py  train.sh  utils.py
experiments/perf/: README.md  config.json  preproc.py  scoring_time.py
experiments/ridge/: README.md  eval.py  ft_config.json  train.py  train.sh
src/ilmart/: __init__.py  ilmart.py  ilmart_distill.py  utils.py
test/: test.txt  test_ilmart.py  test_ilmart_distilled.py  train.txt  vali.txt  web30k_10_main_effects.lgbm
(+26 files in other folders)
