[metadata]
name = ilmart
version = 0.0.1
author = Alberto Veneri
author_email = alberto.veneri@unive.it
description = A simple package used in the proof of concept of ilmart
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/veneres/ilmart
project_urls =
    Bug Tracker = https://github.com/veneres/ilmart/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = ilmart